rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__multi_stage_separate_pre_aggs_pg_result.snap
---
source: cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
expression: result
---
orders__count_reduce_status | orders__revenue_reduce_status
----------------------------+------------------------------
7                           | 1750.00
