rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__multi_stage_separate_pre_aggs_time_shift_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 1067
expression: result
---
orders__created_at_month | orders__count_prev_month | orders__revenue_reduce_status
-------------------------+--------------------------+------------------------------
2025-01-01 00:00:00      | 2                        | 250.00000                    
2025-02-01 00:00:00      | 2                        | 750.00000                    
2025-03-01 00:00:00      | 3                        | 750.00000
