rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__partial_match_main_rollup_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
expression: result
---
orders__status | orders__count
---------------+--------------
cancelled      | 1            
completed      | 5            
pending        | 4
