rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__rollup_lambda_cross_cube_union_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 1518
expression: result
---
visitor_checkins__visitor_id | visitor_checkins__created_at_day | visitor_checkins__count
-----------------------------+----------------------------------+------------------------
1                            | 2025-01-10T00:00:00              | 4                      
1                            | 2025-01-11T00:00:00              | 2                      
4                            | 2025-01-31T00:00:00              | 2                      
4                            | 2025-02-01T00:00:00              | 2                      
5                            | 2025-02-01T00:00:00              | 2                      
6                            | 2025-02-15T00:00:00              | 2                      
7                            | 2025-02-16T00:00:00              | 2                      
8                            | 2025-03-01T00:00:00              | 2
