rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__segment_full_match_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 625
expression: result
---
orders__status | orders__created_at_day | orders__count
---------------+------------------------+--------------
cancelled      | 2025-02-15 00:00:00    | 1            
completed      | 2025-01-10 00:00:00    | 1            
completed      | 2025-01-31 00:00:00    | 1            
pending        | 2025-01-10 00:00:00    | 1            
pending        | 2025-03-01 00:00:00    | 1
