rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__segment_partial_match_unused_segment_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 659
expression: result
---
orders__status | orders__created_at_day | orders__count
---------------+------------------------+--------------
cancelled      | 2025-02-15T00:00:00    | 1            
completed      | 2025-01-10T00:00:00    | 1            
completed      | 2025-01-11T00:00:00    | 1            
completed      | 2025-01-31T00:00:00    | 1            
completed      | 2025-02-01T00:00:00    | 1            
completed      | 2025-03-01T00:00:00    | 1            
pending        | 2025-01-10T00:00:00    | 1            
pending        | 2025-02-01T00:00:00    | 1            
pending        | 2025-03-01T00:00:00    | 1            
pending        | 2025-03-02T00:00:00    | 1
